# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

* baselayout-1.12.0 (23 May 2006)

  23 May 2006; Roy Marples <uberlord@gentoo.org>:

    halt.sh can now deal with unionfs a bit better, #99682.

  16 May 2006; Roy Marples <uberlord@gentoo.org>:

    Always report Xen domU domains correctly, #107976.

  15 May 2006; Roy Marples <uberlord@gentoo.org>:

    Always test for space at the end of the bridge name.

  14 May 2006; Roy Marples <uberlord@gentoo.org>:

    Don't stop coldplugged services when changing runlevels, #113264.

    Only report inactive start once.

  13 May 2006; Mike Frysinger <vapier@gentoo.org>:

    Remove SVCDIR from functions.sh #133171 by petre rodan.

  07 May 2006; Roy Marples <uberlord@gentoo.org>:

    Fix logic in br2684ctl.sh as reported by Alin Nastac, #132549.

  05 May 2006; Mike Frysinger <vapier@gentoo.org>:

    Fix typo s/veend/vewend/ in functions.sh as reported by Yoshino #132262.

  05 May 2006; Roy Marples <uberlord@gentoo.org>:

    If a device initiated service is in the default runlevel then we no
    longer start it in the boot runlevel.

  04 May 2006; Roy Marples <uberlord@gentoo.org>:

    RC_COLDPLUG is now just a yes|no setting and the service list allowed
    is now in RC_PLUG_SERVICES.
    Added RC_HOTPLUG setting similar to RC_COLDPLUG.

* baselayout-1.12.0_pre19 (02 May 2006)

  01 May 2006; Roy Marples <uberlord@gentoo.org>:

    /proc/net/wireless may not have whitespace after $iface:
    wpa_supplicant no longer requires ctrl_interface set.
    Thanks to kelmo for those ideas.

  28 Apr 2006; Mike Frysinger <vapier@gentoo.org>:

    Tweak is_older_than than so it skips checking the timestamps on directories,
    just the files in the directory.

    Rewrite modules-update to make it readable and usuable without old modutils.

  24 Apr 2006; Roy Marples <uberlord@gentoo.org>:
